Update server to Java 21 and bump server version to 1.5.1