@@ -2,24 +2,22 @@ plugins {
     id 'java'
     id 'application'
 	id 'maven-publish'
-    id 'org.jetbrains.kotlin.jvm' version '1.8.20-RC'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.20-RC'
 	id 'com.github.johnrengelman.shadow' version '8.1.0'
 }
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(19)
+		languageVersion = JavaLanguageVersion.of(21)
 	}
 }
 
 compileJava {
 	options.compilerArgs.addAll(['--enable-preview'])
-	options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.concurrent'])
 }
 
 application {
-	applicationDefaultJvmArgs = ['--enable-preview',
-								 '--add-modules', 'jdk.incubator.concurrent']
+	applicationDefaultJvmArgs = ['--enable-preview']
 }
 
 mainClassName = 'com.rs.Launcher'
@@ -33,20 +31,20 @@ repositories {
 }
 
 group 'rs.darkan'
-version '1.4.1'
+version '1.5.1'
 
 dependencies {
 	implementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.36'
-	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.8.10'
-	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: '1.8.10'
-	implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.6.4'
-	implementation group: 'rs.darkan', name: 'core', version: '1.2.15'
+	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.9.20-RC'
+	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: '1.9.20-RC'
+	implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.7.3'
+	implementation group: 'rs.darkan', name: 'core', version: '1.5.1'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 	implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
 	implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.4.0'
 	implementation group: 'org.mongodb', name: 'mongodb-driver-core', version: '4.4.0'
 	implementation group: 'io.netty', name: 'netty-all', version: '4.1.86.Final'
-	implementation group: 'io.undertow', name: 'undertow-core', version: '2.2.22.Final'
+	implementation group: 'io.undertow', name: 'undertow-core', version: '2.3.8.Final'
 	implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.5.8'
 	implementation group: 'com.trivago', name: 'fastutil-concurrent-wrapper', version: '0.1.0'
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
